# McMinnville_Parking_Project_Arduino

./: .gitignore
Fake_Data/Fake_Data/: Fake_Data.ino
Node_Rev1/: Average.cpp  Average.h  Node_Rev1.ino  UltrasonicDetection.cpp  UltrasonicDetection.h  radio.cpp  radio.h  runningAverage.cpp  runningAverage.h
SensorDetectionTesting/: .gitignore  CMakeLists.txt  carFunction.cpp  emh.json  exampleReadCSV.cpp  main  main.cpp
SensorDetectionTesting/libraries/: Average.h
SensorDetectionTesting/testFiles/: One One way thne the other.txt  Two cars other way both sensor.txt  car person car.txt  data.csv  generatedOneCar.csv  two cars both sensors.txt  two through slow.txt
SensorDetectionTesting/testFiles/Mon/: one good.txt  one-2.txt  one.txt  one_good.txt  two-1.txt  two-2.txt  two-3.txt
SensorDetectionTesting/testFiles/Thur/: two-1-d2.txt  two-2-d1-good.txt  two-3-d2.txt  two-4-d1.txt
SensorDetectionTesting/testFiles/alone/: alone-test1.txt  alone-test2.txt  alone-test3.txt
SensorDetectionTesting/testFiles/mon-bef/: test1-1c.txt  test1-one car.txt  test2-s2 to s1.txt  test2-s2ts1.txt  test3-s1ts2-good.txt  test4-s2ts1.txt  test5-s1ts2.txt  test6-s2ts1.txt  test7-s1ts2.txt
Server_Rev1/: Server_Rev1.ino
Test_Client/: Test_Client.ino
Test_Server/: Test_Server.ino
